--- a/src/app/components/home/HeroSection.module.css
+++ b/src/app/components/home/HeroSection.module.css
@@ -8,9 +8,13 @@
   background-size: cover;
   background-repeat: no-repeat;
 }
+.heroSection__column {
+  width: 100%;
+  height: 100%;
+}
 .heroSection__column video {
   width: 100%;
-  height: auto;
+  height: 100%;
   object-fit: cover;
 }
 .heroSection .heroSection__column:nth-child(2) {
